fix gaps footer and bottomSheet (#2923)

--- a/src/modules/footer/components/footer.css
+++ b/src/modules/footer/components/footer.css
@@ -31,10 +31,10 @@
 	z-index: calc(var(--z-mapbuttons) + 1);
 }
 .is-landscape.is-open-navigationRail .footer {
-	transform: translate(5.5em, 0);
+	transform: translate(5em, 0);
 }
 .is-open.is-open-navigationRail .footer {
-	transform: translate(33.5em, 0);
+	transform: translate(33em, 0);
 }
 .is-portrait:not(.is-embedded) .content,
 .is-tablet:not(.is-embedded) .content {
